--- a/05_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
                             {
                                 foreach (var item in commonInfo.ProductCategoryList)
                                 {
-                                    if (item.ChildCategory != null && item.ChildCategory.Length > 0)
+                                    if (item.ChildCategory != null && item.ChildCategory.Length > 0 && item.Id == 73)
                                     {
                                         foreach (var childItem in item.ChildCategory)
                                         {
