--- a/10_Theme_09_v2/assets/stylesheet/style.css
+++ b/10_Theme_09_v2/assets/stylesheet/style.css
@@ -3783,8 +3783,7 @@ ul.pdt-list li.item a img.image-hover {
 
         .products-grid .item .item-inner .item-img {
             position: relative;
-            overflow:hidden;
-            border: 1px #eaeaea solid;
+            overflow:hidden;           
         }
 
             .products-grid .item .item-inner .item-img .ico-product {
@@ -4877,25 +4876,20 @@ text-transform: uppercase
     padding: 0px 10px;
     position: relative;
     margin-top: 0px;
-    padding-bottom: 42px;
-    background-color: #fff;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #f5f5f5 #eee #d5d5d5 #eee;
-    box-shadow: 0 5px 0 rgba(200,200,200,.2);
+    padding-bottom: 32px;   
+  
     margin-bottom: 30px;
 }
 
     .best-pro .new_title {
-        text-align: left;
+        text-align: center;
         margin-left: -20px;
-        margin-right: -10px;
-        border-bottom: 1px #e5e5e5 solid;
+        margin-right: -10px;        
         margin-bottom: 10px;
     }
 
         .best-pro .new_title h2 {
-            color: #fff;
+            color: #5f5f5f;
             font-size: 16px;
             font-weight: bold;
             margin-bottom: 0px;
@@ -4904,8 +4898,7 @@ text-transform: uppercase
             display: inline-block;
             font-family: 'Montserrat', sans-serif;
             letter-spacing: 0.5px;
-            text-transform: uppercase;
-            background: #f5e416;
+            text-transform: uppercase;            
             margin-top: 0px;
             min-width: 250px;
         }
@@ -4913,15 +4906,12 @@ text-transform: uppercase
 
 
             .best-pro .new_title h2:after {
-                content: "";
-                height: 1px;
-                width: 1px;
-                border-style: solid;
-                border-width: 5px;
-                position: absolute;
-                bottom: -10px;
-                left: 0;
-                border-color: #6a9c32 #6a9c32 transparent transparent;
+                width: 45px;
+                height: 3px;
+                content: '';
+                display: block;
+                background: #fb9009;
+                margin: 10px auto 20px;
             }
 
 
@@ -5201,19 +5191,8 @@ text-transform: uppercase
 }
 
 .btn-cart {
-    padding: 0px !important;
-    border: 2px #88be4c solid !important;
+    padding: 5px !important;  
 }
-
-    .btn-cart:before {
-        content: '\f07a';
-        font-family: FontAwesome;
-        background: #88be4c;
-        color: #fff;
-        font-size: 16px;
-        padding: 6px 15px;
-        display: inline-block;
-    }
 
     .btn-cart span {
         display: inline-block;
@@ -8485,8 +8464,7 @@ ol#compare-items li {
 
 .category-products {
     padding-bottom: 5px;
-    overflow: hidden;
-    padding: 25px;
+    overflow: hidden;   
 }
 /* View Type: List */
 .products-list .product-name {
@@ -9760,10 +9738,8 @@ a.button.detail-bnt span {
 
 .form-add-tags button.button {
     display: inline;
-    background: #fff;
-    font-family: 'Open Sans', sans-serif;
-    border: 2px solid #eee;
-    background: #fff;
+    background: #fb9009;
+    font-family: 'Open Sans', sans-serif;    
     padding: 6px 12px;
     transition: color 300ms ease-in-out 0s, background-color 300ms ease-in-out 0s, background-position 300ms ease-in-out 0s;
 }
@@ -12199,30 +12175,32 @@ address {
     right: 8px;
 }
 
-button.button {
+a.button,button.button {
     display: inline-block;
     border: 0;
-    background: #fff;
+    background: #fb9009;
     padding: 8px 15px;
     font-size: 12px;
     text-align: center;
     white-space: nowrap;
     font-weight: normal;
-    border: 2px solid #eee;
-    -webkit-transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
-    -o-transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
-    transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
-    box-shadow: inset 0 0 0 0 #fff;
+    margin: -2px;
+    color: white;
 }
-
-    button.button:hover {
-        -webkit-transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
-        -o-transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
-        transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
-        box-shadow: inset 0 -45px 0 0 #ed6663;
-        border: 2px solid #e0403d;
-        color: #fff;
-    }
+a.button {
+    background-color: burlywood;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+   
+}
+.add_cart .btn-cart {
+    width: 50%;
+}
+button.button:hover {
+    background: red;
+    color: #fff;
+}
 
     button.button span span {
         border: 0;
@@ -12235,12 +12213,6 @@ button.button {
     border: 2px #ddd solid;
     text-transform: uppercase;
 }
-
-    .button:hover, .button:focus, .btn:hover, .btn:focus, .button-inverse, .button-vote:hover, .sidebar .button:hover, .sidebar .button:focus, .sidebar .btn:hover, .sidebar .btn:focus, .form-list .bootstrap-select.btn-group .btn:hover .caret, .form-list .bootstrap-select.btn-group .btn:focus .caret, .buttons-set .back-link a:hover, .buttons-set .back-link a:focus, .scrolltop, .button-tabs li a:hover, .button-tabs li a:focus {
-        border: 2px #ed6663 solid;
-        color: #FFF;
-    }
-
 .products-grid-home .link-wishlist:before {
     content: "\f004";
 }
