--- a/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -91,7 +91,7 @@
                         <div class="co-info">
                             <div><a href="/"><img src="@commonInfo.Logo" alt="footer logo"></a></div>
                             <address>
-                                <div><em class="icon-location-arrow"></em> <span>@commonInfo.Address</span></div>
+                                <div><em class="icon-location-arrow"></em>@commonInfo.Address</div>
                                 <div> <em class="icon-mobile-phone"></em><span> @Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</span></div>
                                 <div> <em class="icon-envelope"></em><span>@commonInfo.Email</span></div>
                             </address>
