--- a/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -7,31 +7,30 @@
     }
 }
 <div id="page">
-    <div class="our-features-box wow bounceInUp animated animated">
+    <div class="latest-blog our-features-box wow bounceInUp animated animated">
+        <div class="new_title">
+            <h2>Tư vấn thiết kế</h2>
+        </div>
         <div class="container">
             <ul>
                 <li>
-                    <div class="feature-box free-shipping">
-                        <div class="icon-truck"></div>
-                        <div class="content">Miễn phí VC đơn hàng trên 1 Triệu</div>
+                    <div class="feature-box need-help">                      
+                        <div class="content"><a href="/tu-van-thiet-ke-phong-khach-b120">Tư vấn thiết kế phòng khách</a></div>
                     </div>
                 </li>
                 <li>
                     <div class="feature-box need-help">
-                        <div class="icon-support"></div>
-                        <div class="content">Điện thoại Tư vấn @commonInfo.HotLine</div>
+                        <div class="content"><a href="/tu-van-thiet-ke-phong-ngu-b122">Tư vấn thiết kế phòng ngủ</a></div>
                     </div>
                 </li>
                 <li>
-                    <div class="feature-box money-back">
-                        <div class="icon-money"></div>
-                        <div class="content">Hoàn trả lại tiền cho khách</div>
+                    <div class="feature-box need-help">
+                        <div class="content"><a href="/tu-van-thiet-ke-phong-an-b121">Tư vấn thiết kế phòng ăn</a></div>
                     </div>
                 </li>
                 <li class="last">
-                    <div class="feature-box return-policy">
-                        <div class="icon-return"></div>
-                        <div class="content">Vận chuyển ngay trong ngày</div>
+                    <div class="feature-box need-help">
+                        <div class="content"><a href="/tu-van-thiet-ke-bep-dep-b123">Tư vấn thiết kế bếp đẹp</a></div>
                     </div>
                 </li>
             </ul>
@@ -178,7 +177,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 Vinfish. All Rights Reserved. Power by <a href="http://anpero.com" title="thiết kế web quản lý bán hàng, thiết kế web chuyên nghiệp">Anpero</a></div>
+                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 @commonInfo.Name. All Rights Reserved. Power by <a href="http://anpero.com" title="thiết kế web quản lý bán hàng, thiết kế web chuyên nghiệp">Anpero</a></div>
                 </div>                
             </div>            
         </div>        
