--- a/10_Theme_09_v2/Views/Shared/_partial/_MainHeader_2.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainHeader_2.cshtml
@@ -31,7 +31,7 @@
                         <div class="nav-inner">
                             <!-- BEGIN NAV -->
                             <ul id="nav" class="hidden-xs">
-                                <li id="nav-home" class="level0 parent drop-menu"><a class="level-top active" href="index.html"><span>Home</span></a></li>
+                                <li id="nav-home" class="level0 parent drop-menu"><a class="level-top active" href="/"><span>Home</span></a></li>
                                 <li class="mega-menu">
                                     <a class="level-top" href="grid.html"><span>Salads</span></a>
                                     <div class="level0-wrapper dropdown-6col" style="left: 0px; display: none;">
