--- a/10_Theme_09_v2/Views/Article/Category.cshtml
+++ b/10_Theme_09_v2/Views/Article/Category.cshtml
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-title">
-                    <h2>Tin Tức | VinFish</h2>
+                    <h2>Tin Tức | @commonInfo.Name</h2>
                 </div>
             </div>
             <!--col-xs-12-->
