--- a/10_Theme_09_v2/assets/stylesheet/style.css
+++ b/10_Theme_09_v2/assets/stylesheet/style.css
@@ -141,10 +141,13 @@ header {
 
 .header-container .fl-header-right {
    float:right;
-   margin-top:94px;
+   margin-top:98px;
 }
 .search-input {
     border: 1px solid #fb9009;
+}
+.search-input input{
+    border: 0px;
 }
 .search-bar {
     position: relative;
@@ -1284,7 +1287,7 @@ ul.level1 {
 }
 
 #nav .level0-wrapper, #nav.classic ul.level0 {
-    top: 75px;
+    top: 40px;
 }
 #nav > li.mega-menu {
     position: static;
@@ -1671,7 +1674,7 @@ ul.level1 {
     padding: 6px 0;
     border-top: none;
     box-shadow: 0 0 20px -5px;
-    width: 165px;
+    width: 195px;
     text-align: left;
     z-index: 1000;
     opacity: 0;
@@ -1682,12 +1685,12 @@ ul.level1 {
 
 #nav li.drop-menu:hover ul {
     position: absolute;
-    top: 75px;
+    top: 38px;
     background: #fff;
     padding: 6px 0;
     border-top: none;
     box-shadow: 0 0 20px -5px;
-    width: 165px;
+    width:255px;
     text-align: left;
     z-index: 1000;
     display: block;
@@ -1726,7 +1729,7 @@ ul.level1 {
     #nav li.drop-menu ul li a {
         color: #333;
         line-height: 30px;
-        font-size: 13px;
+        font-size: 14px;
         padding: 0 12px;
         display: block;
         transition: all 200ms ease-in-out;
@@ -5953,7 +5956,7 @@ text-transform: uppercase
         margin: auto;
         padding: 0;
         border: none;
-        padding: 50px 0px;
+        padding: 10px 0px;
         overflow: hidden;
     }
 
@@ -5996,7 +5999,7 @@ text-transform: uppercase
 }
 
 .need-help {
-    background: #685c88;
+    background: #fb9009;
     color: #fff;
 }
 
@@ -6013,10 +6016,8 @@ text-transform: uppercase
 
 .our-features-box .feature-box .content {
     display: block;
-    text-align: left;
-    margin-left: 50px;
-    border-left: 1px rgba(255,255,255, 0.5) solid;
-    padding-left: 15px;
+    text-align: center;
+   
 }
 
 .our-features-box .feature-box span {
@@ -9233,12 +9234,13 @@ a.button.detail-bnt span {
         margin-top: 0px;
         font-weight: normal;
         margin-left: 10px;
-        border: 2px #ed6663 solid;
+        border: 1px #fb9009 solid;
         border-radius: 0px;
         -webkit-transition: all 0.3s cubic-bezier(0.8, 0, 0, 1);
         -o-transition: all 0.3s cubic-bezier(0.8, 0, 0, 1);
         transition: all 0.3s cubic-bezier(0.8, 0, 0, 1);
         box-shadow: inset 0 0 0 0 #fff;
+        height: 42px;
     }
 
         .product-view .product-shop .add-to-box .btn-cart:before {
@@ -10463,8 +10465,7 @@ button.button.submit:before {
     float: left;
 }
 
-button.button span {
-    font-weight: bold;
+button.button span { 
     font-size: 12px;
     text-transform: uppercase;
 }
@@ -11571,7 +11572,7 @@ footer .footer-inner {
     }
 
 .footer-column-1 {
-    margin-right: 30px;
+    margin-right: 25px;
     margin-bottom: 15px;
     line-height: 18px;
     min-height: 220px;
@@ -11997,12 +11998,11 @@ address {
 }
 
     .social a {
-        color: #88be4c;
+        color: #fb9009;
         width: 38px;
         height: 38px;
         line-height: 40px;
         background-color: #fff;
-        border-radius: 30px;
     }
 
         .social a:hover {
@@ -12188,11 +12188,11 @@ a.button,button.button {
     color: white;
 }
 a.button {
-    background-color: burlywood;
-    font-weight: bold;
+    background-color: #f5f5f5;   
     font-size: 12px;
     text-transform: uppercase;
-   
+    color: black;
+    font-weight: normal;
 }
 .add_cart .btn-cart {
     width: 50%;
@@ -14071,8 +14071,7 @@ select#shipping-address-select {
     border-bottom: none;
     text-align: center;
     background-repeat: no-repeat;
-    background-image: url(/assets/images/category-bg.jpg);
-    margin-top: -80px;
+    background-image: url(/assets/images/category-bg.jpg);  
 }
 
     .page-heading .page-title h2 {
@@ -14238,4 +14237,13 @@ select#shipping-address-select {
     top: 46px;
     z-index: 9999;
     box-shadow: 0 3px 3px #CCC;
+    height:48px;
+    padding-top:7px;
 }
+.search-fixed {
+    position: fixed;
+    z-index: 99999;
+    top: -47px;
+    right: 55px;
+}
+.feature-box a{color:white;}
